--- a/OrderBentoSystem/OrderBentoSystem.csproj
+++ b/OrderBentoSystem/OrderBentoSystem.csproj
@@ -86,6 +86,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="method\PasswordHelper.cs" />
+    <Compile Include="method\RNG.cs" />
     <Compile Include="Model\ClassRoom.cs">
       <DependentUpon>OBSystem.tt</DependentUpon>
     </Compile>
@@ -139,6 +141,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegisterForm.Designer.cs">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ResetUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResetUserForm.Designer.cs">
+      <DependentUpon>ResetUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SelectFavoriteForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +217,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegisterForm.resx">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResetUserForm.resx">
+      <DependentUpon>ResetUserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SelectFavoriteForm.resx">
       <DependentUpon>SelectFavoriteForm.cs</DependentUpon>
     </EmbeddedResource>
